kubernetes/yaml/istio/sample/v7/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - "demo.ops.com"
  gateways:
    - gateway
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 2s
    route:
        - destination:
            host: nginx.ops.svc.cluster.local
            subset: app-group-v1
          weight: 50
        - destination:
            host: nginx.ops.svc.cluster.local
            subset: app-group-v2
          weight: 50
    timeout: 1s
